# smriti

./: .gitignore  .gitmodules  CLAUDE.md  README.md  ROADMAP.md  settings.gradle.kts
android/: .gitignore  README.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android/app/src/main/java/com/nishparadox/smriti/: MainActivity.kt  SaveLinkActivity.kt  ShareActivity.kt
android/app/src/main/java/com/nishparadox/smriti/apps/: AppWhitelist.kt
android/app/src/main/java/com/nishparadox/smriti/capture/: CaptureService.kt
android/app/src/main/java/com/nishparadox/smriti/github/: GitHubApi.kt  GitHubConnection.kt  GitHubSource.kt
android/app/src/main/java/com/nishparadox/smriti/media/: NowPlaying.kt
android/app/src/main/java/com/nishparadox/smriti/notes/: DriveSync.kt  SmaranStorage.kt  Snip.kt  SnipStore.kt
android/app/src/main/java/com/nishparadox/smriti/preprocess/: SmaranProcessor.kt
android/app/src/main/java/com/nishparadox/smriti/rag/: LlamaModelManager.kt  LlamaNative.kt  RagGenerator.kt  RagModel.kt
android/app/src/main/java/com/nishparadox/smriti/search/: ExternalSource.kt  SearchIndex.kt
android/app/src/main/java/com/nishparadox/smriti/settings/: Settings.kt
android/app/src/main/java/com/nishparadox/smriti/transcribe/: ModelManager.kt  Transcriber.kt
android/app/src/main/java/com/nishparadox/smriti/trigger/: SnipEntryPoint.kt
android/app/src/main/java/com/nishparadox/smriti/ui/: Theme.kt
android/app/src/main/java/com/nishparadox/smriti/update/: UpdateChecker.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/java/com/nishparadox/shruti/: MainActivity.kt
app/src/main/java/com/nishparadox/smriti/: MainActivity.kt  ShareActivity.kt  StopReceiver.kt
app/src/main/java/com/nishparadox/smriti/apps/: AppWhitelist.kt
app/src/main/java/com/nishparadox/smriti/capture/: CaptureService.kt  RingBuffer.kt  SnipController.kt  WavWriter.kt
app/src/main/java/com/nishparadox/smriti/notes/: DeviceId.kt  DriveSync.kt  Snip.kt  SnipStore.kt
app/src/main/java/com/nishparadox/smriti/output/: NotificationOutput.kt
app/src/main/java/com/nishparadox/smriti/settings/: Settings.kt
app/src/main/java/com/nishparadox/smriti/transcribe/: WhisperNative.kt  WhisperTranscriber.kt
app/src/main/java/com/nishparadox/smriti/trigger/: FloatingBubbleService.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/nishparadox/smriti/capture/: RingBufferTest.kt  SnipControllerTest.kt
docs/: save-protocol.md
docs/plans/: 2026-07-05-smriti-v0.md
docs/specs/: 2026-07-05-smriti-design.md  2026-07-10-github-connector-external-search.md
docs/superpowers/plans/: 2026-07-05-shruti-v0.md
docs/superpowers/specs/: 2026-07-05-shruti-design.md
firefox/: .gitignore  README.md  background.js  content.js  manifest.json  options.html  options.js
